--- a/RentADriveMobile2/app/build.gradle
+++ b/RentADriveMobile2/app/build.gradle
@@ -32,5 +32,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:19.1.0'
     implementation 'com.google.firebase:firebase-database:19.2.0'
 
+    // Added these two lines
+    // Adding the PlaceAutoCompleteFragment Dependency for Google Map search bar
+    implementation 'com.google.android.gms:play-services-maps:12.0.1'
+    implementation 'com.google.android.gms:play-services-places:12.0.1'
 }
 apply plugin: 'com.google.gms.google-services'
