--- a/RentADriveMobile2/app/src/main/AndroidManifest.xml
+++ b/RentADriveMobile2/app/src/main/AndroidManifest.xml
@@ -15,7 +15,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".TestingActivity"></activity>
+        <activity
+            android:name=".NavigationActivity"
+            android:label="@string/title_activity_navigation"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".TestingActivity" />
         <activity android:name=".UserPostActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -28,7 +32,9 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyDgrm0FfKug0X2EkuXlzQgPF8zjkOvKxFY" />
+
         <uses-library android:name="com.google.android.maps" />
+
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps" />
