--- a/RentADriveMobile2/app/build.gradle
+++ b/RentADriveMobile2/app/build.gradle
@@ -35,7 +35,11 @@ dependencies {
 
     // Added these two lines
     // Adding the PlaceAutoCompleteFragment Dependency for Google Map search bar
-    implementation 'com.google.android.gms:play-services-maps:12.0.1'
-    implementation 'com.google.android.gms:play-services-places:12.0.1'
+    // implementation 'com.google.android.gms:play-services-maps:12.0.1'
+    // implementation 'com.google.android.gms:play-services-places:12.0.1'
+
+    implementation 'com.google.android.libraries.places:places:1.0.0'
+
+
 }
 apply plugin: 'com.google.gms.google-services'
