--- a/RentADriveMobile2/app/build.gradle
+++ b/RentADriveMobile2/app/build.gradle
@@ -25,6 +25,9 @@ dependencies {
     implementation 'com.android.support:design'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
+
+    implementation 'com.google.android.gms:play-services-location:15.0.1'
+
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.navigation:navigation-fragment:2.0.0'
     implementation 'androidx.navigation:navigation-ui:2.0.0'
