--- a/RentADriveMobile2/app/src/main/AndroidManifest.xml
+++ b/RentADriveMobile2/app/src/main/AndroidManifest.xml
@@ -10,6 +10,8 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.google.android.things.permission.MANAGE_GNSS_DRIVERS" />
+
 
     <application
         android:allowBackup="true"
